# papers-phd

./: README.md
APLAS2016/: Makefile  annotated-review.txt  isotype-spec.txt  main.bib  main.tex  mathpartir.sty  reply.txt
module/: DependentSubtyping.txt  Makefile  Subtyping.txt  Subtyping2.txt  Subtyping3.txt  Subtyping4.txt  module-impl.cabal  prove.txt
module/app/: Main.hs
module/doc/: Makefile  main.bib  main.fdb_latexmk  main.fls  main.tex
module/doc/auto/: main.el  sigplanconf.el  test.el
module/doc/sections/: appendix.mng.tex  expcore.ott
module/doc/sections/auto/: appendix.mng.el  test.el
module/note/: design.org  workplan.org
module/proof/: .axioms.aux  .axioms.vo.aux  .definitions.aux  .definitions.vo.aux  .depend  .elab_prop_alg.aux  .elab_prop_alg.vo.aux  .infrastructure.aux  .infrastructure.vo.aux  .lia.cache  .subtyping_prop2.aux  .subtyping_prop2.vo.aux  Makefile  _CoqProject  axioms.glob  axioms.v  axioms.vo  definition2.v  definition3.v  definitions.glob  definitions.v  definitions.vo  definitions_old.v  disjointness.v  elab_prop.v  elab_prop_alg.glob  elab_prop_alg.v  infrastructure.glob  infrastructure.v  infrastructure.vo  progress.md  rules.txt  subtyping_prop.v  subtyping_prop2.glob  subtyping_prop2.v  subtyping_prop2.vo  subtyping_prop_old.v  subtyping_refl.v  subtyping_trans.v
module/proof/old/: counter_examples.txt  definitions.glob  definitions.v  definitions.vo  infrastructure.glob  infrastructure.vo  properties.v  sound_complete.glob  sound_complete.v  subtyping.glob  subtyping.v  subtyping.vo  subtyping2.glob  subtyping2.v  subtyping2.vo  subtyping4.glob  subtyping4.v  subtyping4.vo  subtyping_gen.v  subtyping_old.v  typing.glob  typing.v  typing.vo  typing2.glob  typing2.v  typing4.v  typing_old.v  uniqueness.v  utility.glob  utility.vo  wt_target.v
module/proof/simpl/: CoherenceBasic.v  Makefile  STLC_Core_Definitions.v  STLC_Core_Infrastructure.v
module/src/: Common.hs  Tokens.x  Translation.hs
module/src/source/: Env.hs  Parser.y  Syntax.hs  TypeCheck.hs
(+345 files in other folders)
